<resources>
    <string name="app_name">CryptoReview</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="_24h">24H</string>
    <string name="_1h">1H</string>
    <string name="dollar_price">$%1$s</string>
    <string name="percent_numb">%s%</string>
    <string name="your_crypto_list">Your Crypto List</string>
    <string name="default_error_message">Something went wrong! Please try again.</string>
    <string name="no_connection_error_message">No Internet Connection!</string>
    <string name="ok">OK</string>
    <string name="total_portfolio_value">Total Portfolio Value</string>
    <string name="_24hr_change">24hr Change</string>
    <string name="total_profit">Total Profit</string>
    <string name="holdings">Holdings</string>
    <string name="profit">Profit</string>
    <string name="holding">Holding</string>
    <string name="count">Count</string>
    <string name="cancel">Cancel</string>

</resources>
