<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.nodav.cryptoreview.view.MainActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/total_stats"
        android:layout_width="match_parent"
        android:layout_height="64dp"

        android:background="@color/colorCard"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_portfolio_value"
            android:textColor="#ccc"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_value_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#eee"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_value" />

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_profit"
            android:textColor="#ccc"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_change_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#eee"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/header"
        android:layout_height="25dp"
        android:background="#111"
        app:layout_constraintTop_toBottomOf="@id/total_stats">


        <TextView
            android:id="@+id/tv_name_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_holdings_header"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_holdings_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/holdings"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="15dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintLeft_toRightOf="@+id/tv_name_header"
            app:layout_constraintRight_toLeftOf="@+id/tv_price_header"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_price_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/price"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="15dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintLeft_toRightOf="@+id/tv_holdings_header"
            app:layout_constraintRight_toLeftOf="@+id/tv_profit_header"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_profit_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/profit"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="15dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintLeft_toRightOf="@+id/tv_price_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />


    </android.support.constraint.ConstraintLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_crypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>

